--- a/pt/probando.html
+++ b/pt/probando.html
@@ -1,32 +1,45 @@
  <html>
 <head>
 <script>
-function Nodo(id, label, title)
-{
-	this.id = id;
-	this.label = label;
-	this.title = title;
-}
-function showUser() {	
-    //document.getElementById("txtHint").innerHTML = xmlhttp.responseText;
-	var xhttp = new XMLHttpRequest();
-	var myJSON,i;
-	xhttp.onreadystatechange = function() {
+	function EnviarCheckBoxes()
+	{
+		var todo = document.getElementsByName("interfaces");
+		console.log(todo[0].value);
+		var arreglo = [todo[0].value,todo[1].value,todo[2].value];
+		var jsonInterfaces = JSON.stringify(arreglo);
+		console.log(jsonInterfaces);
+		var xhttp = new XMLHttpRequest();
+		
+		xhttp.onreadystatechange = function() {
     	if (this.readyState == 4 && this.status == 200) 
 		{
 			var respuesta = this.responseText;
-		    myJSON = JSON.parse(respuesta);
-    	    document.getElementById("demo").innerHTML = respuesta;
-			//console.log(myJSON[0]);		
-			console.log("--------");
-			//console.log(myJSON[1]);
-			
-			for(i=0; i< myJSON[0].length; i++)
-			{console.log(myJSON[0][i].id);}	
+			console.log(respuesta);
     	}
   	};
-	xhttp.open("GET", "getNodesLinks.php", true);
-	xhttp.send();   
+	xhttp.open("GET", "mainCreateVlan.php?j="+jsonInterfaces, true);
+	xhttp.send();
+		
+	}
+function showUser() {
+	//alert("sirve");
+	var myDiv = document.getElementById("myDiv");          
+    var label = document.createElement('label'); 
+	label.htmlFor = "id"; 
+	label.appendChild(document.createTextNode('Interface: ')); 
+	
+	var x = document.createElement("INPUT");
+	x.setAttribute("type", "checkbox");
+	x.setAttribute("name","interfaces");
+	x.setAttribute("value","nombreN");
+
+	br = document.createElement("br");
+
+	myDiv.appendChild(x);
+	myDiv.appendChild(label);
+	myDiv.appendChild(br);
+	alert("sirve");
+
 }
 </script>
 </head>
@@ -35,8 +48,11 @@ function showUser() {
 <button onclick="showUser();"> Click me!!! </button>
 <p id= "demo"> </p>
 
+<button onclick="EnviarCheckBoxes();"> EnviarCheckBoxes </button>
+
 <br>
 <div id="txtHint"><b>Nodos: </b></div>
 
+<div id = "myDiv"></div> 
 </body>
 </html> 
